--- a/views/kitting.ejs
+++ b/views/kitting.ejs
@@ -140,8 +140,9 @@
                   <span style="font-weight:600">CoA - Kitting</span>
                   </a>
                 </li>
+                <!--
                 <li class="treeview">
-                  <a href="#" >
+                  <a href="#" style="text-decoration: none;">
                   <span>CoA - Operator</span>
                   <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
@@ -149,37 +150,38 @@
                   </a>
                   <ul class="treeview-menu">
                     <li>
-                      <a href="/acs/17" >
+                      <a href="/acs/17" style="text-decoration: none;">
                         <span>Line 17</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/18" >
+                      <a href="/acs/18" style="text-decoration: none;">
                         <span>Line 18</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/19" >
+                      <a href="/acs/19" style="text-decoration: none;">
                         <span>Line 19</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/20" >
+                      <a href="/acs/20" style="text-decoration: none;">
                         <span>Line 20</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/21" >
+                      <a href="/acs/21" style="text-decoration: none;">
                         <span>Line 21</span>
                       </a>
                     </li>
                     <li>
-                      <a href="/acs/22" >
+                      <a href="/acs/22" style="text-decoration: none;">
                         <span>Line 22</span>
                       </a>
                     </li>
                   </ul>
                 </li>
+                -->
               </ul>
             </li>
 
